# barpi

./: .gitignore  Cargo.toml
barpi/: Cargo.toml  barpi.service
barpi/misc/: barpi.service  config.yaml
barpi/src/: client.rs  main.rs
barrier-client/: Cargo.toml
barrier-client/examples/: dummy_client.rs
barrier-client/src/: actuator.rs  client.rs  clipboard.rs  error.rs  lib.rs  packet.rs  packet_io.rs  packet_stream.rs  take.rs  thread_act.rs
dummy-example/: Cargo.toml
dummy-example/src/: main.rs
serbar/: Cargo.toml  com.0d0a.serbar.plist
serbar/src/: main.rs  ser_actuator.rs
synergy-hid/: Cargo.toml
synergy-hid/src/: descriptors.rs  hid.rs  lib.rs
