[package]
name = "barpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-gadget = { version = "0.6", features = ["tokio"] }
barrier-client = { path = "../barrier-client" }
synergy-hid = { path = "../synergy-hid" }
