[package]
name = "barpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
usb-gadget = { version = "0.6", features = ["tokio"] }
barrier-client = { path = "../barrier-client" }
synergy-hid = { path = "../synergy-hid" }
glob = "0.3.1"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"