[package]
name = "barrier-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
tokio = { version = "1", features = ["io-util"]}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }

[features]
default = ["clipboard", "barrier-options"]
clipboard = []
barrier-options = []
