[package]
name = "dummy-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }

barrier-client = { path = "../barrier-client", default-features = false, features = [], optional = true }
synergy-hid = { path = "../synergy-hid" }

[features]
default = ["barrier-client"]
